--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,27 @@
+<!--
+  **NOTE:** This is a template for index.html.
+  It uses ejs and htmpWebpackPlugin to genrate a different index.html for each environment.
+  htmlWebpackPlugin will dynamically add references to the scripts and styles that it bundles
+  to this file. The generated bundles have hash-baed filenames,
+  so it's necessary to add the references dynamically.
+  For more info on ejs, see http://www.embeddedjs.com/.
+  For examples of using it with htmlWebpackPlugin,
+  see https://github.com/jaketrent/html-webpacktemplate/blob/master/index.ejs
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <% if (htmlWebpackPlugin.options.trackJSToken) { %>
+    <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+    <script>
+      window.TrackJS &&
+        TrackJS.install({
+          token: '<%=htmlWebpackPlugin.options.trackJSToken%>'
+          // for more configuration options, see https://docs.trackjs.com
+        });
+    </script>
+    <% } %>
+    <meta charset="UTF-8" />
     <title>Demo</title>
   </head>
   <body>
@@ -14,10 +34,7 @@
         <th>Last Name</th>
         <th>Email</th>
       </thead>
-      <tbody id="users">
-
-      </tbody>
+      <tbody id="users"></tbody>
     </table>
-    <script src="bundle.js"></script>
   </body>
 </html>
